--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     </div>
                 </div>
 
-                <!-- Development -->
+                <!-- Development & Communication -->
                 <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg">
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 bg-accent-100 dark:bg-accent-900 rounded-lg flex items-center justify-center mr-4">
@@ -419,7 +419,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5"/>
                             </svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Development</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Development & Communication</h3>
                     </div>
                     <div class="space-y-4">
 
@@ -439,13 +439,18 @@
                             <h4 class="font-semibold text-gray-900 dark:text-white"><a href="authnz.html" class="hover:text-accent-600 dark:hover:text-accent-400 transition-colors">Noundry.Authnz</a></h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Sessionless OAuth 2.0 authentication for multiple providers</p>
                         </div>
+                        <div class="border-l-4 border-accent-500 pl-4">
+                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="sanquhar.html" class="hover:text-accent-600 dark:hover:text-accent-400 transition-colors">Noundry.Sanquhar</a></h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">Modern .NET 9 mailing library with Razor templates and multi-provider support</p>
+                        </div>
                     </div>
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
                             dotnet add package Noundry.UI<br>
                             npm install @noundry/elements<br>
                             dotnet add package Noundry.TagHelpers<br>
-                            dotnet add package Noundry.Authnz
+                            dotnet add package Noundry.Authnz<br>
+                            dotnet add package Noundry.Sanquhar
                         </code>
                     </div>
                 </div>
