--- a/libraries.html
+++ b/libraries.html
@@ -580,6 +580,30 @@ pre, pre *, code, code * {
                     </a>
                 </div>
 
+                <!-- Noundry.Sanquhar -->
+                <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg hover:shadow-xl transition-shadow">
+                    <div class="flex items-center mb-6">
+                        <div class="w-12 h-12 bg-blue-100 dark:bg-blue-900 rounded-lg flex items-center justify-center mr-4">
+                            <svg class="w-6 h-6 text-blue-600 dark:text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                            </svg>
+                        </div>
+                        <h3 class="text-xl font-bold text-gray-900 dark:text-white">Noundry.Sanquhar</h3>
+                    </div>
+                    <p class="text-gray-600 dark:text-gray-300 mb-4">Modern .NET 9 mailing library with Razor template engine and multi-provider support (SMTP, SendGrid, Mailgun).</p>
+
+                    <div class="text-sm font-mono bg-gray-100 dark:bg-gray-800 rounded p-2 mb-4">
+                        dotnet add package Noundry.Sanquhar
+                    </div>
+
+                    <a href="sanquhar.html" class="inline-flex items-center text-blue-600 dark:text-blue-400 font-semibold">
+                        Learn More
+                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                        </svg>
+                    </a>
+                </div>
+
                 <!-- Noundry.AuthnzNet -->
                 <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg hover:shadow-xl transition-shadow">
                     <div class="flex items-center mb-6">
